<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/buttoncirculo"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/btoncirculo"
                android:text="" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/Nombre" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="107dp" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:text="@string/editar_perfil" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/seguidores" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="60dp"
                    android:text="@string/siguiendo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="60dp"
                    android:text="@string/Estrellita" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>